- Dark theme updated

--- a/static/themes/dark/theme.css
+++ b/static/themes/dark/theme.css
@@ -7,9 +7,14 @@
 .kiwi-wrap {
     background: #201f1f;
     color: #dedede;
-
-    --kiwi-nick-brightness: 50;
+    --kiwi-nick-brightness: 70;
     --kiwi-supports-monospace: 1;
+}
+
+/* Kiwi Theme Background is used to apply the same background colour accross components, rather than targeting them all specifically */
+.kiwi-theme-bg {
+    background-color: #1e1e1e;
+    color: #fff;
 }
 
 /* Welcome Screen ( Welcome.vue ) */
@@ -69,10 +74,6 @@
 
 .kiwi-workspace::after {
     background-color: rgba(255, 255, 255, 0.4);
-}
-
-.u-tabbed-content {
-    background-color: #1e1e1e;
 }
 
 .u-tabbed-view-tabs {
@@ -180,10 +181,6 @@
 }
 
 /* Application settings ( AppSettings.vue ) */
-.kiwi-appsettings {
-    background: #1e1e1e;
-}
-
 .kiwi-appsettings-block {
     background-color: #272626;
     border: 1px solid rgba(0, 0, 0, 0.2);
@@ -251,12 +248,8 @@
     color: #dedede;
 }
 
-.kiwi-container-toggledraw-statebrowser,
-.kiwi-container-toggledraw-sidebar {
-    background: #1e1e1e;
-}
-
 .kiwi-container-toggledraw-statebrowser {
+    background: #1e1e1e;
     border-right: 1px solid #ddd;
 }
 
@@ -488,17 +481,6 @@
 
 .kiwi-messagelist-message.kiwi-messagelist-message-connection-disconnected .kiwi-messagelist-body {
     background-color: #f16f74;
-    color: #fff;
-}
-
-/* Sidebar */
-.kiwi-sidebar {
-    background: #1e1e1e;
-}
-
-/* Sidebar ( Sidebar.vue ) */
-.kiwi-sidebar-options {
-    background-color: #42b992;
     color: #fff;
 }
 
