- Dark theme add network icon in

--- a/static/themes/dark/theme.css
+++ b/static/themes/dark/theme.css
@@ -1200,6 +1200,15 @@
     text-decoration: underline;
 }
 
+/*Icon before the network in network list */
+.kiwi-statebrowser-network-name::before {
+    content: '\f233';
+    font-family: fontAwesome;
+    margin-right: 2px;
+    font-weight: 100;
+    text-decoration: none;
+}
+
 /* Icons in the Channel List */
 .kiwi-statebrowser-channel[data-name^="#"]::before {
     content: '\f0c0';
