--- a/static/themes/nightswatch/theme.css
+++ b/static/themes/nightswatch/theme.css
@@ -830,9 +830,20 @@
     border-bottom: 1px solid rgba(255, 255, 255, 0.5);
     color: #131312;
 }
-.kiwi-statebrowser-channelfilter::after {
-    color: #000;
+
+.kiwi-statebrowser-channelfilter p a {
+    color: #fff;
 }
+
+.kiwi-statebrowser-channelfilter p a:hover {
+    color: #fff;
+}
+
+
+.kiwi-statebrowser-channelfilter::after {
+    color: #fff;
+}
+
 .kiwi-statebrowser-channelfilter input {
     background-color: #adadad;
     color: #000;
