--- a/static/themes/radioactive/theme.css
+++ b/static/themes/radioactive/theme.css
@@ -758,6 +758,11 @@
     border-bottom: 1px solid rgba(255, 255, 255, 0.5);
     color: #131312;
 }
+
+.kiwi-statebrowser-channelfilter p a {
+    color: #6fffb0;
+}
+
 .kiwi-statebrowser-channelfilter::after {
     color: #000;
 }
