- nightwatch aliases EM colour has been changed to white

--- a/static/themes/nightswatch/theme.css
+++ b/static/themes/nightswatch/theme.css
@@ -718,7 +718,7 @@
     border: 1px dashed rgba(0,0,0, 0.4);
 }
 .kiwi-settings-aliases-help em {
-    color: #000000;
+    color: #fff;
     font-weight: 900;
 }
 
